--- a/_config.yml
+++ b/_config.yml
@@ -302,10 +302,10 @@ defaults:
       layout: single
       author_profile: true
       share: true
-  # _questionaswers
+  # _kubernetes
   - scope:
       path: ""
-      type: questionaswers
+      type: Kubernetes
     values:
       layout: single
       author_profile: true
