mv kubernetes-archive.md Kubernetes-archive.md

--- a/_config.yml
+++ b/_config.yml
@@ -255,7 +255,7 @@ collections:
   portfolio:
     output: true
     permalink: /:collection/:path/
-  questionaswers:
+  Kubernetes:
     output: true
     permalink: /:collection/:path/
 
