--- a/_config.yml
+++ b/_config.yml
@@ -249,6 +249,11 @@ collections:
   Kubernetes:
     output: true
     permalink: /:collection/:path/
+collections:
+  Linux:
+    output: true
+    permalink: /:collection/:path/
+
 
 # Defaults
 defaults:
@@ -277,4 +282,12 @@ defaults:
       layout: single
       author_profile: true
       share: true
-      
+  # _Linux
+  - scope:
+      path: ""
+      type: Linux
+    values:
+      layout: single
+      author_profile: true
+      share: true
+
