--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ minimal_mistakes_skin    : "mint" #"default" , "air", "aqua", "contrast", "dark"
 locale                   : "en-US"
 title                    : "My Tech Page"
 title_separator          : "-"
-subtitle                 : "Kubernetes Linux Ansible Docker .."
+subtitle                 : "Kubernetes Linux Ansible Docker git .."
 name                     : "Your Name"
 description              : "My Tech Page..."
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
