--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ words_per_minute         : 200
 #atom_feed:
 #  path                   : # blank (default) uses feed.xml
 #search                   : true # true, false (default)
-#search_full_content      : false # true, false (default)
+#search_full_content      : true # true, false (default)
 #search_provider          : "lunr"
 algolia:
   application_id         : "QB6HVGBSBA"
